--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
         run: go mod verify
       
       - name: Build package
-        run: go build -v ./...
+        run: go build -v $(go list ./... | grep -v /examples)
       
       - name: Run tests
-        run: go test -v -race -coverprofile=coverage.out ./...
+        run: go test -v -race -coverprofile=coverage.out $(go list ./... | grep -v /examples)
       
       - name: Generate coverage report
         if: matrix.go-version == '1.22'
@@ -53,7 +53,7 @@ jobs:
           retention-days: 7
       
       - name: Run go vet
-        run: go vet ./...
+        run: go vet $(go list ./... | grep -v /examples)
       
       - name: Run staticcheck
         uses: dominikh/staticcheck-action@v1
