--- a/.github/workflows/daily-full-test.yml
+++ b/.github/workflows/daily-full-test.yml
@@ -40,13 +40,13 @@ jobs:
         run: go mod verify
       
       - name: Build project
-        run: go build -v ./...
+        run: go build -v $(go list ./... | grep -v /examples)
       
       - name: Run unit tests
-        run: go test -v -race -coverprofile=coverage.out ./...
+        run: go test -v -race -coverprofile=coverage.out $(go list ./... | grep -v /examples)
       
       - name: Run benchmark tests
-        run: go test -v -bench=. -benchmem ./... | tee benchmark.txt
+        run: go test -v -bench=. -benchmem $(go list ./... | grep -v /examples) | tee benchmark.txt
         continue-on-error: true
       
       - name: Upload test coverage
@@ -91,10 +91,10 @@ jobs:
         run: go mod download
       
       - name: Build project
-        run: go build -v ./...
+        run: go build -v $(go list ./... | grep -v /examples)
       
       - name: Run tests
-        run: go test -v -race ./...
+        run: go test -v -race $(go list ./... | grep -v /examples)
       
       - name: Upload test results
         if: always()
@@ -135,7 +135,7 @@ jobs:
         run: go mod download
       
       - name: Build Go library
-        run: go build -v ./...
+        run: go build -v $(go list ./... | grep -v /examples)
       
       - name: Run cross-language tests
         run: |
